* configure/pam_strerror: Remove old ugly-hack option for pam_strerror
  interface change (kukuk)
* configure.in: Fix AC_DEFINE usage for autoheader (kukuk)
* configure.in/_pam_aconf.h.in: Remove feature.h inclusion (kukuk)
* defs: Remove obsolete directory/content (kukuk)
* Rename _pam_aconf.h.in to config.h (kukuk)
* pam_unix: Don't ignore pam_get_item return value (kukuk)

0.80: Wed Jul 13 13:23:20 CEST 2005
* pam_tally: test for NULL data before dereferencing them (t8m)
* pam_unix: fix regression introduced in 0.78 - both NIS and local password
  should be changed if possible (t8m)
* misc_conv: flush input first then print the prompt - fixes problem
  with expect scripts (t8m)
* pam_unix: nis option shouldn't clear the shadow option (t8m)
* cleanups and minor bugfixes by Steve Grubb (t8m)
* pam_private.h: set PAM_DEFAULT_PROMPT to "login: " (kukuk)
* pam_mkhomedir: Create parent directories if they do not already
  exist (Bug 600351 - kukuk)
* pam_mkhomedir: Set owner/permissions of home directory after we
  created all files (Bug 1032922 - kukuk)
* pam_rhosts: Get rid of static buffer for path (kukuk)
* pam_selinux/pam_unix/pam_rootok: Add SELinux support based on
  patch from Red Hat (kukuk)
* pam_limits: Correct support of unlimited limits, use correct type
  for rlimit value (Bug 945449 - kukuk, t8m)
* pam_xauth: Unset the XAUTHORITY variable when requesting user is
  root and target user is not (t8m)
* pam_access: Add listsep option to set list element separator by
  Richard Shaffer (t8m)
* pam_limits: Don't reset process priority if none is specified in
  the config file (Novell #81690 - kukuk)
* Fix all occurrence of dereferencing type-punned pointer will break
  strict-aliasing rules warnings (kukuk)
* pam_limits: Support new limits in linux 2.6.12 (t8m)
* pam_mkhomedir: change mode datatype (toady)
* pam_limits: Don't lowercase login names (kukuk)

0.79: Thu Mar 31 16:48:45 CEST 2005
* pam_tally: added audit option (toady)